feat: Implement comprehensive agent system with memory and RAG capabilities
Agent System Enhancements:
- Add agent domain models (Order, TradeDirection, TradeOutcome, TradingMemory)
- Implement memory services (CachedMemoryStore, PineconeMemoryStore, RAGService)
- Add embedding services (OpenAIEmbeddingService, LocalEmbeddingService)
- Create agent infrastructure with JPA repositories and MapStruct mappers

Trading Bot Improvements:
- Enhance event system with typed EventWrapper and improved persistence
- Add new controller endpoints for bot state management and resilience metrics
- Implement Bybit futures service with rate limiting
- Update event entities and persistence services

Testing and Infrastructure:
- Add gRPC test configuration and integration tests
- Update application properties for new services
- Enhance build configuration for agent dependencies

API Enhancements:
- Add comprehensive DTOs for bot management and trading operations
- Implement global exception handling
- Add gateway health and resilience monitoring endpoints